Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-18486

Control pane (RSK Cancel) of the test note is covered by "Options, Exit" when re-launching the application from Open applications list

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.7.4
    • 4.7.2
    • None
    • N8
    • eeb43433043dbcaa38177438cb6cba203fb01c96

    Description

      Problem is that if there is some open dialog e.g. some progress dialog with Cancel button in some application and user leaves from application e.g. lock phone and then come back to application e.g. unlock phone, application softkeys will overlap dialog softkeys. So basically it looks like that application window is placed to top off the dialog window and not another around as it should be.

      Please look attached pictures in following order:

      1. Nokia screenshot 2011-03-31 09-30-11.png
      2. Nokia screenshot 2011-03-31 09-30-19.png
      3. Nokia screenshot 2011-03-31 09-30-35.png

      BrDemo is just a demo to reproduce the error. This error actually impacts MyDSL application a lot. It blocks basic use cases and causes some other errors. So it is a Critical error.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            samimeri Sami Merila (Inactive)
            tero Tero Kuutti (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes