Native dialog softkeys are covered by QApplication softkeys

Dialog softkeys are covered by Qt Application's Softkeys

Updating softkeys while showing a native dialog, pushes Qt application CBA
on top of dialog CBA. Therefore, native dialog can not be dismissed.

As a workaround, when gaining focus to a window, do not update application
softkeys, if there is a native dialog shown.

Task-number: QTBUG-18486
Reviewed-by: mread